# tracelit-python

./: CHANGELOG.md  LICENSE  README.md  llm_prompt.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/tracelit/: __init__.py  auto_instrument.py  configuration.py  error_always_on_sampler.py  error_span_processor.py  instrumentation.py  logger_bridge.py  metrics.py
src/tracelit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tracelit/integrations/: __init__.py  asgi.py  auto.py  celery.py  django.py  wsgi.py
tests/: test_auto_instrument.py  test_auto_instrument_silent.py  test_configuration.py  test_error_always_on_sampler.py  test_error_span_processor.py  test_instrumentation.py  test_logger_bridge.py  test_metrics.py
