[build-system]
requires = ["setuptools>=68", "wheel", "packaging>=24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracelit-python"
version = "0.1.0"
description = "Official Python SDK for Tracelit with OpenTelemetry."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Tracelit" }
]
keywords = ["tracelit", "opentelemetry", "tracing", "metrics", "logs", "apm"]
dependencies = [
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "opentelemetry-semantic-conventions>=0.48b0",
  "opentelemetry-instrumentation>=0.48b0",
]

[project.optional-dependencies]
web = [
  "opentelemetry-instrumentation-asgi>=0.48b0",
  "opentelemetry-instrumentation-wsgi>=0.48b0",
  "opentelemetry-instrumentation-django>=0.48b0",
  "opentelemetry-instrumentation-flask>=0.48b0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-starlette>=0.48b0",
  "opentelemetry-instrumentation-tornado>=0.48b0",
  "opentelemetry-instrumentation-aiohttp-server>=0.48b0",
  "opentelemetry-instrumentation-pyramid>=0.48b0",
  "opentelemetry-instrumentation-falcon>=0.48b0",
  "opentelemetry-instrumentation-bottle>=0.48b0",
  "opentelemetry-instrumentation-cherrypy>=0.48b0",
]
db = [
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
  "opentelemetry-instrumentation-psycopg2>=0.48b0",
  "opentelemetry-instrumentation-psycopg>=0.48b0",
  "opentelemetry-instrumentation-asyncpg>=0.48b0",
  "opentelemetry-instrumentation-aiopg>=0.48b0",
  "opentelemetry-instrumentation-pymysql>=0.48b0",
  "opentelemetry-instrumentation-mysql>=0.48b0",
  "opentelemetry-instrumentation-pymssql>=0.48b0",
  "opentelemetry-instrumentation-pymongo>=0.48b0",
  "opentelemetry-instrumentation-redis>=0.48b0",
  "opentelemetry-instrumentation-sqlite3>=0.48b0",
  "opentelemetry-instrumentation-elasticsearch>=0.48b0",
  "opentelemetry-instrumentation-cassandra>=0.48b0",
  "opentelemetry-instrumentation-tortoiseorm>=0.48b0",
]
workers = [
  "opentelemetry-instrumentation-celery>=0.48b0",
  "opentelemetry-instrumentation-remoulade>=0.48b0",
]
http = [
  "opentelemetry-instrumentation-requests>=0.48b0",
  "opentelemetry-instrumentation-urllib3>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-instrumentation-aiohttp-client>=0.48b0",
  "opentelemetry-instrumentation-urllib>=0.48b0",
]
messaging = [
  "opentelemetry-instrumentation-kafka-python>=0.48b0",
  "opentelemetry-instrumentation-confluent-kafka>=0.48b0",
  "opentelemetry-instrumentation-aiokafka>=0.48b0",
  "opentelemetry-instrumentation-pika>=0.48b0",
  "opentelemetry-instrumentation-aio-pika>=0.48b0",
]
cloud = [
  "opentelemetry-instrumentation-botocore>=0.48b0",
  "opentelemetry-instrumentation-boto3sqs>=0.48b0",
  "opentelemetry-instrumentation-google-genai>=0.48b0",
]
grpc = ["opentelemetry-instrumentation-grpc>=0.48b0"]
graphql = ["opentelemetry-instrumentation-graphql>=0.48b0"]
all = ["opentelemetry-contrib-instrumentations>=0.48b0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "respx>=0.21.0", "httpx>=0.27.0"]

[project.urls]
Homepage = "https://tracelit.io"
Repository = "https://github.com/Tracelit-AI/tracelit-python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

